--- a/Space Invaders/Space Invaders.ipynb
+++ b/Space Invaders/Space Invaders.ipynb
@@ -17,11 +17,7 @@
      "output_type": "stream",
      "text": [
       "pygame 2.0.1 (SDL 2.0.14, Python 3.8.3)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
      ]
     }
    ],
@@ -151,7 +147,6 @@
     "        bulletY=750\n",
     "        bullet_state=\"ready\"\n",
     "        score_value+=1\n",
-    "        print(score_value)\n",
     "        enemyX=random.randint(100,1500)\n",
     "        enemyY=random.randint(100,500)\n",
     "        explosion_sound=mixer.Sound(\"explode.wav\")\n",
